Enable location tracking for Quagga camera input stream

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         console.error("Error enumerating video devices: ", err);
     });
     const quaggaConf = {
-        locate: false,
+        locate: true,
         inputStream: {
             target: document.querySelector("#camera"),
             type: "LiveStream",
